# kafka-view

./: Cargo.toml
examples/: consumer_offsets_reader.rs
src/: cache.rs  config.rs  error.rs  live_consumer.rs  main.rs  metadata.rs  metrics.rs  offsets.rs  utils.rs  zk.rs
src/web_server/: api.rs  server.rs
src/web_server/pages/: cluster.rs  clusters.rs  error_defaults.rs  group.rs  internals.rs  omnisearch.rs  topic.rs
