[package]
name = "kafka-view"
version = "0.3.3"
authors = ["Federico Giraud <giraud.federico@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2021"
[dependencies]
brotli = "7.0.0"
byteorder = "1.0.0"
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.0.0"
env_logger = "0.6.1"
error-chain = "0.12.0"
flate2 = "0.2.0"
futures = "0.1.0"
futures-cpupool = "0.1.0"
hyper = "0.10"
lazy_static = "1.0.0"
log = "0.4.6"
maud = { version = "0.26.0", features = ["rocket"] }
pkg-config = "0.3.31"
rand = "0.6.5"
rdkafka = {git="https://github.com/fede1024/rust-rdkafka",features=["gssapi"] }
regex = "1.1.5"
rocket = "0.5.1"
rocket_codegen = "0.5.1"
scheduled-executor = "0.4.0"
serde = "1.0.0"
serde-transcode = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
serde_yaml = "0.8.8"
zookeeper = "0.5.6"
mio = { version= "1" ,features = ["os-poll", "net","os-ext"] }
tokio = { version = "1.41", features = ["full"] }
tokio-zookeeper = "0.4.0"
